--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-inlinesvg": "^4.1.4",
     "react-intersection-observer": "^9.13.1",
     "react-lite-youtube-embed": "^2.4.0",
+    "react-simple-typewriter": "^5.0.1",
     "rehype-sanitize": "^6.0.0",
     "rehype-stringify": "^10.0.1",
     "remark-parse": "^11.0.0",
