--- a/package.json
+++ b/package.json
@@ -56,9 +56,9 @@
     "next": "^15.3.1",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
-    "react": "19.0.0-rc-02c0e824-20241028",
-    "react-day-picker": "8.10.1",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react": "^19.0.0",
+    "react-day-picker": "^9.6.7",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-icons": "^5.3.0",
     "react-inlinesvg": "^4.1.4",
@@ -83,8 +83,8 @@
     "@tailwindcss/typography": "^0.5.15",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
     "postcss": "^8",
