--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@react-three/fiber": "^9.0.0",
     "@react-three/postprocessing": "^3.0.0",
     "@types/mdx": "^2.0.13",
+    "@types/nodemailer": "^6.4.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -57,6 +58,7 @@
     "next": "^15.3.1",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
     "react": "^19.0.0",
     "react-day-picker": "^9.6.7",
     "react-dom": "^19.0.0",
