--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "input-otp": "^1.4.2",
     "js-yaml": "^4.1.0",
     "lucide-react": "^0.503.0",
+    "motion": "^12.9.7",
     "next": "^15.3.1",
     "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
