--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -6,6 +6,10 @@
     "nodejs_compat",
     "global_fetch_strictly_public"
   ],
+	"routes": [
+		"apavayan.com/*",
+		"www.apavayan.com/*"
+	],
 	"assets": {
 		"binding": "ASSETS",
 		"directory": "./dist"
