fix: Add routes configuration for custom domains in wrangler.jsonc

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -6,6 +6,16 @@
     "nodejs_compat",
     "global_fetch_strictly_public"
   ],
+  "routes": [
+    {
+      "pattern": "apavayan.com",
+      "custom_domain": true
+    },
+    {
+      "pattern": "www.apavayan.com",
+      "custom_domain": true
+    }
+  ],
 	"assets": {
 		"binding": "ASSETS",
 		"directory": "./dist"
